widget config save completed.

--- a/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/NetCoreCMS.ImageSlider.csproj
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/NetCoreCMS.ImageSlider.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Repository\" />
     <Folder Include="Services\" />
+    <Folder Include="Widgets\" />
   </ItemGroup>
 
 </Project>
