--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,6 @@ image: Visual Studio 2017
 init:
   - git config --global core.autocrlf true
 before_build:
-  - appveyor-retry dotnet restore -v Minimal
+  - appveyor-retry dotnet restore
 test: off
 deploy: off
