maintenance mode is added.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/NetCoreCMS.Modules.Admin.csproj
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/NetCoreCMS.Modules.Admin.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Views\Admin\MaintenanceMode.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="Views\_ViewImports.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
