Added EntityFramework core Raw SQL query execution support with Model list return support. at Asp.Net Core MVC

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/NetCoreCMS.Modules.Admin.csproj
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/NetCoreCMS.Modules.Admin.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="wwwroot\css\NccModuleAdmin.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Views\Admin\MaintenanceMode.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
