--- a/NetCoreCMS.UnitTests/NetCoreCMS.Framework.Test/NetCoreCMS.Framework.Test.csproj
+++ b/NetCoreCMS.UnitTests/NetCoreCMS.Framework.Test/NetCoreCMS.Framework.Test.csproj
@@ -2,12 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
-  
+
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.1-rc2-build3844" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1-rc2-build3844" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
   </ItemGroup>
-  
+
 </Project>
