--- a/NetCoreCMS.UnitTests/NetCoreCMS.Framework.Test/NetCoreCMS.Framework.Test.csproj
+++ b/NetCoreCMS.UnitTests/NetCoreCMS.Framework.Test/NetCoreCMS.Framework.Test.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\NetCoreCMS.Framework\NetCoreCMS.Framework.csproj" />
+    <ProjectReference Include="..\UnitTests.Lib\UnitTests.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
