--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,12 @@
 image: Visual Studio 2017
 init:
   - git config --global core.autocrlf true
+shallow_clone: true 
 branches:
     only:
     - master
+install:
+  - ps: Install-Package xunit -Force -Confirm:$true
 before_build:
   - appveyor-retry dotnet restore
 test: on
