--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,13 @@
 image: Visual Studio 2017
+$msbuildPath = $(cmd /c "%programfiles(x86)%\Microsoft Visual Studio\2017\Community\MSBuild\15.0\Bin\amd64\MsBuild.exe")
+
+install:
+  - ps: Install-Package xunit -Force -Confirm:$true
+
 init:
   - git config --global core.autocrlf true
 shallow_clone: true 
-branches:
-    only:
-    - master
-install:
-  - ps: Install-Package xunit -Force -Confirm:$true
+
 before_build:
   - appveyor-retry dotnet restore
 test: on
