--- a/NetCoreCMS.Framework/NetCoreCMS.Framework.csproj
+++ b/NetCoreCMS.Framework/NetCoreCMS.Framework.csproj
@@ -21,13 +21,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <None Remove="Resources\NetCoreCMS.Framework.i18n.SharedResource.bn.lang" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Content Include="Resources\NetCoreCMS.Framework.i18n.SharedResource.bn.lang">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Content>
+    <None Remove="Resources\SharedResource.lang" />
   </ItemGroup>
 
   <ItemGroup>
@@ -65,6 +59,10 @@
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\SharedResource.lang" />
   </ItemGroup>
 
   <ItemGroup>
